# NightRain2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fixed-main-cpp.txt  get_stb_headers.bat  imgui.ini  main.cpp  材质包需求.txt
glfw_test/: CMakeLists.txt  glfw_test.cpp
image_generator/: image_generator.py
include/: filesystem_compat.h
shaders/: lightning.frag  raindrop.frag  raindrop.vert  ripple.frag  ripple.vert  sky.frag  sky.vert  water.frag  water.vert
